[tool.poetry]
name = "kiv-bit-rsa"
version = "0.1.0"
description = "School project from KIV-BIT (Security in Informatics) - RSA cipher and digital signature."
authors = ["Miroslav Krýsl <wilyxjam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
