[tool.poetry]
name = "kiv-bit-rsa"
version = "0.1.0"
description = "School project from KIV-BIT (Security in Informatics) - RSA cipher and digital signature."
authors = ["Miroslav Krýsl <wilyxjam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
tomlkit = "^0.5.3"

[tool.poetry.dev-dependencies]
tox = "^3.8"
pytest = "^4.4"
pytest-cov = "^2.6"

[tool.poetry.scripts]
mkrsa = 'kiv_bit_rsa:cli.cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
