[tool.poetry]
name = "kiv-bit-rsa"
version = "0.1.0"
description = "School project from KIV-BIT (Security in Informatics) - RSA cipher and digital signature."
authors = ["Miroslav Krýsl <wilyxjam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[tool.poetry.scripts]
mkrsa = 'kiv_bit_rsa:cli.cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
